[tool.poetry]
name = "python-nanit"
version = "0.1.0"
description = ""
authors = ["Ariana Hong <aunkei.hong@gmail.com>"]
readme = "README.md"
packages = [{include = "python_nanit"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
